this fixes the bottom navigation responsive bar; items should be visible on desktop/tablets and hidden on mobile

--- a/assentio/static/css/responsive.css
+++ b/assentio/static/css/responsive.css
@@ -2,7 +2,11 @@
 
 article {
     margin: 20px 20px 0 20px;
+}
 
+.bottom-nav-collapse{
+    overflow: hidden;
+    height: 0px;
 }
 
 }
